# ok-forecast-mapper

./: .gitignore  README.md  docker-compose.yml  run_ok_forecast_mapper.sh
data-mapper/: Dockerfile  requirements.txt  setup.py
data-mapper/src/: api.py  mapper.py
data-mapper/tests/: test_api.py  test_mapper.py
png-mapper/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  test.sh
png-mapper/etc/: config.yaml
png-mapper/httpexec/src/httpexec/: asgi.py
png-mapper/src/: CSVReader.cpp  CSVReader.h  Shape.cpp  Shape.h  draw.cpp  draw.h  main.cpp  utils.cpp  utils.h
png-mapper/tests/: CMakeLists.txt  main_test.cc
